Preentrega 2-lógica del armado de turnos sin modo oscuro

--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="shortcut icon" href="/assets/images/logo.ico" type="image/x-icon">
-  <script  defer src="/assets/js/script.js"></script>
   <script  defer src="/assets/js/main.js"></script>
-  <title>Turnos peluquería + modo oscuro</title>
+  <script  defer src="/assets/js/script.js"></script>
+  <title>Unisex Hair Salon-Sacá turno</title>
 </head>
 <body>
   <header>
+    <img src="./assets/images/logo-web.png" alt="logo" class="logo">
 
   </header>
   <main>
-    <h1>Proyecto JS: modo oscuro + sistema de turnos</h1>
-    <p>El proyecto consiste en crear un modo oscuro al sitio web para lograr un diseño más elegante y accesible.</p>
-    <p>Además, tendrá un sistema para pedir turno en una peluquería, eligiendo entre 4 peluqueros según días y horarios disponibles.</p>
+    <h1>Unisex Hair Salon-Sacá turno</h1>
+    <p>Elegí el turno de acuerdo a tu comodidad con nuestros peluqueros y sus variadas especialidades.</p>
+    
+    <section id="peluqueros-container"></section>
+    <section id="form-container"></section>
+    <div id="mensaje-container"></div>
+    <div id="tabla-container"></div>
+
   </main>
   <footer>
       <p>Proyecto creado por Carolina Alejandra Pena Astigarraga para el curso JavaScript Flex de CoderHouse 2024.</p>
+      <p>Web-app para sacar turnos con JavaScript.</p>
   </footer>
 </body>
 </html>
