Preentrega 2-corrección de errores

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="shortcut icon" href="/assets/images/logo.ico" type="image/x-icon">
-  <script  defer src="/assets/js/main.js"></script>
-  <script  defer src="/assets/js/script.js"></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <script  defer src="./assets/js/main.js"></script>
+  <script  defer src="./assets/js/script.js"></script>
   <title>Unisex Hair Salon-Sacá turno</title>
 </head>
 <body>
