entrega final- lógica completa

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
-  <script  defer src="./assets/js/main.js"></script>
+  <script defer src="./assets/js/main.js"></script>
   <script  defer src="./assets/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <title>Unisex Hair Salon-Sacá turno</title>
 </head>
 <body>
@@ -29,4 +30,5 @@
       <p>Web-app para sacar turnos con JavaScript.</p>
   </footer>
 </body>
+
 </html>
